tests/NormalTests/paczka1/fuzzy1/40274003.err
Error in line 7: fe1me A668 0,6
Error in line 11: D9X2 A668 17,3
Error in line 12: Y5z9CsGQT A668 64,9
Error in line 26: fe1me A668 66,0
Error in line 27: fe1me S834 60,3
Error in line 22: 58WQQ A599 50,9
